[package]
name = "rsonnet-loki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rsonnet_loki"
path = "src/lib.rs"

[[bin]]
name = "rsonnet-loki"

[dependencies]
derive_more = "0.99.17"
itertools = "0.10.3"
k8s-openapi = { version = "0.13.1", features = ["v1_22"] }
maplit = "1.0.2"
